[project]
name = "looper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.8.2",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.7",
    "pillow>=11.3.0",
]



[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
